--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>歡迎光臨我的部落格</title>
-</head>
-
-<body>
-    <h1>歡迎光臨我的部落格</h1>
-    <hr>
-    <!-- {{posts}} -->
+<!-- index.html -->
+{% extends 'base.html' %}
+{% block title %} 歡迎光臨 我的Pokémon部落格 {% endblock %}
+{% block headmessage %}
+<h3 style='font-family:標楷體;'>本站文章列表<br>
+    <img width=600px src="https://www.wickedcooltoys.com/wp-content/uploads/2017/06/Homepage-Banner-Pokemon-Web.jpg">
+    {% endblock %}
+    {% block content %}
     {% for post in posts %}
-        <p style='font-family: 微軟正黑體;font-size:16pt;font-weight:bold;'>
-        <a>{{post.title}}</a>
-        </p>發佈於{{post.pub_date}}
-        <p style='font-family: 微軟正黑體;font-size:10pt;letter-spacing:1pt;'>
-        {{post.body}}
-        </p>
+    <div class='panel panel-default'>
+        <div class='panel-heading'>
+            <p style='font-family:微軟雅黑;font-size:14pt;font-weight:bold;'>
+                <a href='/post/{{post.slug}}'>{{ post.title }}</a>
+            </p>
+        </div>
+        <div class='panel-body' style='background-color:#ffffdd'>
+            <p>
+                {{ post.body | truncatechars:40 }}
+            </p>
+        </div>
+        <div class='panel-footer' style='background-color:#efefef'>
+            <p>
+                發佈時間：{{ post.pub_date | date:"Y年 m月 d日, h:i:s"}}
+            </p>
+        </div>
+    </div>
+    <br>
     {% endfor %}
-        <hr>
-        <h3>現在時間：{{now}}</h3>
-</body>
-
-</html>
+    {% endblock %}
